cloudinary set up

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,12 @@
+<div class='intro_animation'>
+  <div class='logo'>
+  <article>
+    <div class="orange"></div>
+    <div class="white"></div>
+  </article>
+    <h1 class="logo_beam">Beam</h1>
+  </div>
+</div>
+
+
 <h2>wanna meat somoe new friends ! you are the right place</h2>
