--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class='intro_animation'>
+<%# <div class='intro_animation'>
   <div class='logo'>
   <article>
     <div class="orange"></div>
@@ -6,7 +6,24 @@
   </article>
     <h1 class="logo_beam">Beam</h1>
   </div>
+</div> %>
+
+<div class="d-flex justify-content-between flex-column align-items-center">
+  <h1 class="my-3 w-75">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit</h1>
+  <form action="" class="my-3 w-75">
+    <input type="text" placeholder="Search for artist, venue, city">
+  </form>
+  <h2 class="my-3 w-75">trainding now</h2>
 </div>
 
-
-<h2>wanna meat somoe new friends ! you are the right place</h2>
+<div class="card-grid">
+    <% @concerts.each do |concert| %>
+      <div class="card card__background" style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
+        <div class="card__content">
+          <p class="card__category"><%= concert.date %></p>
+          <h3 class="card__heading"><%= link_to concert.artist, concert_path(concert) %></h3>
+          <p class="card__category"><%= concert.address %></p>
+        </div>
+      </div>
+    <% end %>
+  <div>
