--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -11,6 +11,43 @@
       </div>
     <% end %>
   <div>
-  <h1>categories</h1>
-
 </section>
+<div class="container">
+<h1>categories</h1>
+    <nav class="categories_tabs stroke">
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link  active" aria-current="page" href="#"><i class="fa-solid fa-guitar icon_category"></i>
+            <p class="tab-text">Rock</p>
+          </a>
+
+        </li>
+        <li class="nav-item">
+          <a class="nav-link  active" aria-current="page" href="#"><i class="fa-solid fa-compact-disc icon_category"></i>
+            <p class="tab-text">Disco</p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link  active" aria-current="page" href="#"><i class="fa-solid fa-drum icon_category"></i>
+            <p class="tab-text">Rock</p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link  active" aria-current="page" href="#"><i class="fa-solid fa-microphone-lines icon_category"></i>
+            <p class="tab-text">Rap</p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link  active" aria-current="page" href="#"><i class="fa-solid fa-headphones-simple icon_category"></i>
+            <p class="tab-text">Silent disco</p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link  active" aria-current="page" href="#"><i class="fa-solid fa-music icon_category"></i>
+            <p class="tab-text">DUNNO</p>
+          </a>
+        </li>
+
+      </ul>
+    </nav>
+</div>
