--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class='intro_animation'>
+<%# <div class='intro_animation'>
   <div class='logo'>
   <article>
     <div class="orange"></div>
@@ -6,7 +6,7 @@
   </article>
     <h1 class="logo_beam">Beam</h1>
   </div>
-</div>
+</div> %>
 
 
 <h2>wanna meat somoe new friends ! you are the right place</h2>
