--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -1,6 +1,6 @@
 <section class="container">
 <h1>Recommended for you</h1>
-  <div class="card-grid">
+  <div class="card-grid_scroll">
     <% @concerts.each do |concert| %>
       <div class="card card__background" style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
         <div class="card__content">
@@ -10,44 +10,60 @@
         </div>
       </div>
     <% end %>
-  <div>
+  </div>
 </section>
 <div class="container">
 <h1>categories</h1>
     <nav class="categories_tabs stroke">
-      <ul class="nav">
-        <li class="nav-item">
-          <a class="nav-link  active" aria-current="page" href="#"><i class="fa-solid fa-guitar icon_category"></i>
-            <p class="tab-text">Rock</p>
-          </a>
-
-        </li>
-        <li class="nav-item">
-          <a class="nav-link  active" aria-current="page" href="#"><i class="fa-solid fa-compact-disc icon_category"></i>
-            <p class="tab-text">Disco</p>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link  active" aria-current="page" href="#"><i class="fa-solid fa-drum icon_category"></i>
-            <p class="tab-text">Rock</p>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link  active" aria-current="page" href="#"><i class="fa-solid fa-microphone-lines icon_category"></i>
-            <p class="tab-text">Rap</p>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link  active" aria-current="page" href="#"><i class="fa-solid fa-headphones-simple icon_category"></i>
-            <p class="tab-text">Silent disco</p>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link  active" aria-current="page" href="#"><i class="fa-solid fa-music icon_category"></i>
+    <button>
+      <div>
+        <i class="fa-solid fa-guitar icon_category"></i>
+        <p class="tab-text">Rock</p>
+      </div>
+    </button>
+    <button>
+      <div>
+        <i class="fa-solid fa-compact-disc icon_category"></i>
+        <p class="tab-text">Disco</p>
+      </div>
+    </button>
+    <button>
+      <div>
+        <i class="fa-solid fa-drum icon_category"></i>
+        <p class="tab-text">Rock</p>
+      </div>
+    </button>
+    <button>
+      <div>
+        <i class="fa-solid fa-microphone-lines icon_category"></i>
+        <p class="tab-text">Rap</p>
+      </div>
+    </button>
+    <button>
+      <div>
+        <i class="fa-solid fa-headphones-simple icon_category"></i>
+        <p class="tab-text">Silent disco</p>
+      </div>
+    </button>
+    <button>
+      <div>
+        <i class="fa-solid fa-music icon_category"></i>
             <p class="tab-text">DUNNO</p>
-          </a>
-        </li>
-
-      </ul>
+      </div>
+    </button>
     </nav>
+</div>
+<div class="container">
+<div class="card-grid_column">
+    <% @concerts.each do |concert| %>
+      <div class="card card__background" style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
+        <div class="card__content">
+          <p class="card__category"><%= concert.date %></p>
+          <h3 class="card__heading"><%= link_to concert.artist, concert_path(concert) %></h3>
+          <p class="card__category"><%= concert.address %></p>
+        </div>
+      </div>
+    <% end %>
+  </div>
+
 </div>
