update class name

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,7 +20,7 @@
   <h2 class="my-3 w-75"><strong>trainding now</strong></h2>
 </div>
 
-<div class="card-grid">
+<div class="card-grid_scroll">
     <% @concerts.each do |concert| %>
       <div class="card card__background" style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
         <div class="card__content">
