--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -1,4 +1,10 @@
 <div class="index-container">
+  <div class="container">
+  <form action="" class="my-3 w-75 searchInputAndIcon w-100">
+        <input class="rounded-pill searchInput" type="text" placeholder="Search for artist, venue, city">
+        <button><i class="fas fa-search"></i></button>
+      </form>
+  </div>
   <section class="container">
   <h1>Recommended for you</h1>
     <div class="card-grid_scroll">
