add slash to close tag

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,4 +30,10 @@
         </div>
       </div>
     <% end %>
-<div>
+</div>
+<div class="footer-map">
+    <div class="footer_content">
+    <p>SOME TEXT</p>
+    <button class="btn-orange">MAP</button>
+    </div>
+</div>
