pg search and changed the form

--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -1,9 +1,15 @@
 <div class="index-container">
   <div class="container">
-  <form action="" class="my-3 w-75 searchInputAndIcon w-100">
-        <input class="rounded-pill searchInput" type="text" placeholder="Search for artist, venue, city">
-        <button><i class="fas fa-search"></i></button>
-      </form>
+  <div class="search-container">
+    <%= form_tag concerts_path, method: :get, class: "my-3 w-75 searchInputAndIcon w-100"  do %>
+      <%= text_field_tag :query,
+        params[:query],
+        class: "rounded-pill searchInput", placeholder: "Search for artist, venue, city"
+      %>
+      <%= button_tag do %>
+        <i class="fas fa-search"></i>
+      <% end %>
+    <% end %>
   </div>
   <section class="container">
   <h1>Recommended for you</h1>
@@ -74,9 +80,9 @@
     </div>
   </div>
 </div>
-  <div class="footer-map">
-    <div class="footer_content">
+<div class="footer-map">
+  <div class="footer_content">
     <p>SOME TEXT</p>
     <button class="btn-orange">MAP</button>
-    </div>
   </div>
+</div>
