--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -19,3 +19,22 @@
     margin: 0;
   }
 }
+
+
+.footer-chatroom {
+  z-index: 999;
+  padding: .8em;
+  position: fixed;
+  bottom: 0;
+  background-color: rgba(192, 192, 192, 0.811);
+  border-radius: 1em 1em 0 0;
+  width: 100%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  textarea {
+    background-color: rgb(255, 255, 255);
+    border-radius: 1em;
+  }
+  .text-field{
+    margin: 0 !important;
+  }
+}
