--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -18,7 +18,7 @@ data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
   %>
     <%= f.input :content,
       label: false,
-      placeholder: "Message ##{@chatroom.name}",
+      placeholder: "Message #{@chatroom.name}",
       wrapper_html: {class: "text-field flex-grow-1"}
     %>
     <%= f.submit "Send", class: "btn-orange-sm" %>
