--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -3,20 +3,20 @@ data-controller="chatroom-subscription"
 data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
   <h1>#<%= @chatroom.name %></h1>
 
-  <div class="messages" data-chatroom-subscription-target="messages">
+  <div style="overflow:scroll; height:400px;" class="messages" data-chatroom-subscription-target="messages">
     <% @chatroom.messages.each do |message| %>
         <%= render "messages/message", message: message %>
     <% end %>
   </div>
+
+  <%= simple_form_for [@chatroom, @message],
+    remote: true,
+    html: { data: {action: "ajax:success->chatroom-subscription#resetForm"}, class: "d-flex" } do |f| %>
+    <%= f.input :content,
+      label: false,
+      placeholder: "Message ##{@chatroom.name}",
+      wrapper_html: {class: "flex-grow-1"}
+    %>
+    <%= f.submit "Send", class: "btn btn-primary" %>
+  <% end %>
 </div>
-<%= simple_form_for [@chatroom, @message],
-  remote: true,
-  html: {data: {action: "ajax:success->chatroom-subscription#resetForm"}, class: "d-flex" } do |f|
-%>
-  <%= f.input :content,
-    label: false,
-    placeholder: "Message ##{@chatroom.name}",
-    wrapper_html: {class: "flex-grow-1"}
-  %>
-  <%= f.submit "Send", class: "btn btn-primary" %>
-<% end %>
