--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -1,6 +1,23 @@
-.bio, .btnFlex{
+.bio, .btnFlex,.flexgap{
   gap:12px
 }
 .avatar{
   width: 120px;
+}
+.reviews{
+  background-color: #D9D9D9;
+  width: 100%;
+  height: 150px;
+  gap:20px
+}
+.fa-star, .fa-star-half{
+  color: goldenrod;
+}
+
+.bar{
+  background-color: white;
+  width: 70px;
+  height: 10px;
+  border-radius: 75px;
+  // display: inline-block;
 }
