--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,20 @@
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-6 d-flex justify-content-between flex-column align-items-center bio">
+    <div class="col-10 d-flex justify-content-between flex-column align-items-center bio">
       <%= image_tag "https://kitt.lewagon.com/placeholder/users/random", class: "avatar text-center  dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false%>
-      <h1 class="text-center">user name</h1>
+      <h1 class="text-center"><%= @username %></h1>
       <p class="text-center">i'm just young dumb and broke, but i'm legend tho</p>
     </div>
     <div class="text-center my-2 col-8 d-flex justify-content-around align-items-center">
-        <div><div><strong>4.9</strong></div><div>Rating</div></div>
+        <div><div><strong><%= @reviewRating %></strong></div><div>Rating</div></div>
         <div><div></div><div>10</div> <div>concerts</div></div>
     </div>
     <div class="text-center my-2 col-8 d-flex justify-content-between align-items-center btnFlex">
       <button class="btn-orange">msg</button>
       <button class="btn-orange">conncet</button>
     </div>
-    <div class="d-flex justify-content-between flex-column mt-4 col-8">
-      <strong>Latest concerts</strong>
+    <div class="d-flex justify-content-between flex-column mt-4 col-12">
+      <strong class="my-3">Latest concerts</strong>
       <div class="card-grid_scroll">
         <% @concerts.each do |concert| %>
           <div class="card card__background" style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
@@ -26,6 +26,31 @@
           </div>
         <% end %>
       </div>
+      <strong class="my-3">Reviews</strong>
+      <div class='reviews rounded d-flex justify-content-between align-items-center px-3 mb-4 col-12'>
+        <div>
+          <div><strong>4.5/5</strong></div>
+          <p>Based on 120 reviews</p>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="far fa-star-half"></i>
+        </div>
+        <div>
+          <div class="d-flex justify-content-between align-items-center flexgap"><span>5 starts </span><span class="bar"></span></div>
+          <div class="d-flex justify-content-between align-items-center flexgap"><span>4 starts </span><span class="bar"></span></div>
+          <div class="d-flex justify-content-between align-items-center flexgap"><span>3 starts </span><span class="bar"></span></div>
+          <div class="d-flex justify-content-between align-items-center flexgap"><span>2 starts </span><span class="bar"></span></div>
+          <div class="d-flex justify-content-between align-items-center flexgap"><span>1 starts </span><span class="bar"></span></div>
+        </div>
+      </div>
+    </div>
+    <div class="mb-2">
+      <i class="fas fa-plus-circle"></i> <span>Add review</span>
+    </div>
+    <hr>
+    <div>
     </div>
   </div>
 </div>
