added photo to each concert and user and each concert has a chatroom

--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -14,8 +14,8 @@
   <section class="container">
   <h1>Recommended for you</h1>
     <div class="card-grid_scroll">
-      <% @concerts.each do |concert| %>
-        <div class="card card__background" style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
+      <% @concerts.sample(3).each do |concert| %>
+        <div class="card card__background" style="background-image: url(<%= concert.photo %>)">
           <div class="card__content">
             <p class="card__category"><%= concert.date %></p>
             <h3 class="card__heading"><%= link_to concert.artist, concert_path(concert) %></h3>
@@ -69,7 +69,7 @@
   <div class="container">
   <div class="card-grid_column">
       <% @concerts.each do |concert| %>
-        <div class="card card__background" style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
+        <div class="card card__background" style="background-image: url(<%= concert.photo %>)">
           <div class="card__content">
             <p class="card__category"><%= concert.date %></p>
             <h3 class="card__heading"><%= link_to concert.artist, concert_path(concert) %></h3>
@@ -80,6 +80,7 @@
     </div>
   </div>
 </div>
+
 <div class="footer-map">
   <div class="footer_content">
     <p>SOME TEXT</p>
