--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -2,7 +2,7 @@
 data-controller="chatroom-subscription"
 data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
   <div class="chatroom-name">
-  <h1><%= @chatroom.name %></h1>
+  <h3>Concert: #<%= @chatroom.concert.artist %></h3>
   </div>
 
   <div style="overflow:scroll; height:400px;" class="messages" data-chatroom-subscription-target="messages">
@@ -17,7 +17,7 @@ data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
       html: {data: {action: "ajax:success->chatroom-subscription#resetForm"}, class: "d-flex" } do |f| %>
       <%= f.input :content,
         label: false,
-        placeholder: "Message #{@chatroom.name}",
+        placeholder: "Message ##{@chatroom.concert.artist}",
         wrapper_html: {class: "text-field flex-grow-1"}
       %>
       <%= f.submit "Send", class: "btn-orange-sm" %>
