--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,6 +1,6 @@
 <div id="message-<%= message.id %>" class="message-container-guests">
   <div class="message-container-photo">
-    <%= image_tag "https://kitt.lewagon.com/placeholder/users/cveneziani", class: "avatar", alt: "avatar" %>
+    <%= image_tag message.user.photo, class: "avatar", alt: "avatar" %>
   </div>
   <div class="message-body">
     <p><strong><%= message.user.username %></strong></p>
