add previous review

--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -21,3 +21,9 @@
   border-radius: 75px;
   // display: inline-block;
 }
+.reviewContent{
+  background-color: rgba(217, 217, 217,0.7);
+  width: 90%;
+  border-radius: 30px;
+  // height: 150px;
+}
