--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -50,7 +50,12 @@
       <i class="fas fa-plus-circle"></i> <span>Add review</span>
     </div>
     <hr>
-    <div>
+    <div class="py-2 reviewContent col-10 mb-2">
+      <div>
+        <strong>beam user</strong>
+        <br>
+        <div><%= @username %> is really nice. We spent really great time at the concert ! Meet you soon ! “</div>
+      </div>
     </div>
   </div>
 </div>
