--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -15,7 +15,7 @@
   <h1>Recommended for you</h1>
     <div class="card-grid_scroll">
       <% @concerts.sample(3).each do |concert| %>
-        <div class="card card__background" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= concert.photo %>)">
+        <div class="card" id="card__background" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= concert.photo %>)">
           <div class="card__content">
             <p class="card__category"><strong><%= concert.date %></strong></p>
             <h3 class="card__heading"><%= link_to concert.artist, concert_path(concert) %></h3>
